FLUID-4397: Most remaining FatPanel issues resolved at least on FF - i) proper dynamic sizing of iframe panel, ii) removal of flicker on startup iii) correct semantics of auto-save, iv) correct semantics of Reset all button

--- a/src/webapp/components/uiOptions/css/FatPanelUIOptions.css
+++ b/src/webapp/components/uiOptions/css/FatPanelUIOptions.css
@@ -22,6 +22,7 @@
 .fl-uiOptions-fatPanel-iframe {
     border: 0;
     background-color: #fff;
+    height: 0px;
 }
 
 /* Theming */
